@@ -25893,7 +25893,7 @@ called a `subword'.  Here are some examples:
   NSGraphicsContext  =>  \"NS\", \"Graphics\" and \"Context\"
 
 This mode changes the definition of a word so that word commands
-treat nomenclature boundaries as word bounaries.
+treat nomenclature boundaries as word boundaries.
 
 \\{subword-mode-map}
 
